--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://cedrictravanca.github.io/P8-portfolio-oc/",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
